# PointClouds

./: .gitignore  CMakeLists.txt  build_win.ps1  vcpkg.json
include/: pointclouds.h
ports/zpp-bits/: vcpkg.json
src/: benchmark-initial.cc  benchmark.cc  draco_codec.cc  pointclouds.cc  test.cc  zstd_codec.cc
